Design fix - related nuggets overflowing

--- a/nuggets-chrome-extension/css/styling.css
+++ b/nuggets-chrome-extension/css/styling.css
@@ -112,7 +112,8 @@ p {
     margin-bottom: -10px;
     padding: 12px;
     background: white;
-    box-shadow: 0 1px 0 #D0D0D0; 
+    box-shadow: 0 1px 0 #D0D0D0;
+    width: inherit; 
 }
 
 .nugget-tag {
